Build shared packages before workspace dev

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "packageManager": "pnpm@10.29.3",
   "scripts": {
-    "dev": "pnpm --parallel --filter @codex-monitor/server --filter @codex-monitor/web dev",
+    "dev": "pnpm --filter @codex-monitor/codex-protocol build && pnpm --filter @codex-monitor/codex-api build && pnpm --parallel --filter @codex-monitor/server --filter @codex-monitor/web dev",
     "build": "pnpm -r build",
     "test": "pnpm -r test",
     "lint": "pnpm -r lint",
