--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@codex-monitor/codex-api": "workspace:*",
     "@codex-monitor/codex-protocol": "workspace:*",
+    "pino": "^9.5.0",
     "zod": "^3.24.1"
   }
 }
