Rebrand to Farfield for open source release
- Rename all packages: @codex-monitor/* → @farfield/{protocol,api,server,web}
- Update all import paths and workspace dependencies throughout
- Rename string literals: logger name, user agent, IPC client type, transport client ID
- Rewrite README with Farfield name, @anshuchimala credit, clean pnpm instructions, and remote access section
- Update AGENTS.md description
- Update package READMEs with new package names
- UI: rename sidebar header to Farfield, remove logo placeholder, add GitHub button linking to achimala/farfield
- Update localStorage key to farfield.sidebar.collapsed-groups.v1

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "codex-monitor-workspace",
+  "name": "farfield",
   "private": true,
   "packageManager": "pnpm@10.29.3",
   "scripts": {
-    "dev": "pnpm --filter @codex-monitor/codex-protocol build && pnpm --filter @codex-monitor/codex-api build && pnpm --parallel --filter @codex-monitor/server --filter @codex-monitor/web dev",
-    "dev:remote": "pnpm --filter @codex-monitor/codex-protocol build && pnpm --filter @codex-monitor/codex-api build && pnpm --parallel --filter @codex-monitor/server --filter @codex-monitor/web dev:remote",
+    "dev": "pnpm --filter @farfield/protocol build && pnpm --filter @farfield/api build && pnpm --parallel --filter @farfield/server --filter @farfield/web dev",
+    "dev:remote": "pnpm --filter @farfield/protocol build && pnpm --filter @farfield/api build && pnpm --parallel --filter @farfield/server --filter @farfield/web dev:remote",
     "build": "pnpm -r build",
     "test": "pnpm -r test",
     "lint": "pnpm -r lint",
