--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@codex-monitor/server",
+  "name": "@farfield/server",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -13,8 +13,8 @@
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
-    "@codex-monitor/codex-api": "workspace:*",
-    "@codex-monitor/codex-protocol": "workspace:*",
+    "@farfield/api": "workspace:*",
+    "@farfield/protocol": "workspace:*",
     "pino": "^9.5.0",
     "zod": "^3.24.1"
   }
