--- a/packages/codex-protocol/package.json
+++ b/packages/codex-protocol/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@codex-monitor/codex-protocol",
+  "name": "@farfield/protocol",
   "version": "0.0.0",
   "private": true,
   "type": "module",
