Streamline OpenCode integration a bit - list and display all available projects in sidebar, make it possible to configure Codex vs OpenCode via simple CLI flags

--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "packageManager": "pnpm@10.29.3",
   "scripts": {
-    "dev": "pnpm --filter @farfield/protocol build && pnpm --filter @farfield/api build && pnpm --parallel --filter @farfield/server --filter @farfield/web dev",
-    "dev:remote": "pnpm --filter @farfield/protocol build && pnpm --filter @farfield/api build && pnpm --parallel --filter @farfield/server --filter @farfield/web dev:remote",
+    "dev": "node scripts/dev.mjs",
+    "dev:remote": "node scripts/dev.mjs --remote",
+    "dev:opencode": "node scripts/dev.mjs --opencode",
+    "dev:opencode:remote": "node scripts/dev.mjs --remote --opencode",
     "build": "pnpm -r build",
     "test": "pnpm -r test",
     "lint": "pnpm -r lint",
